// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should render component 1`] = `
.c1 {
  background: var(--admiral-color-Neutral_Neutral20, #D5D8DE);
  border-radius: 2px;
  min-width: 140px;
  min-height: 4px;
  display: flex;
}

.c2 {
  background: var(--admiral-color-Primary_Primary60Main, #0062FF);
  width: 0%;
  border-radius: 2px;
  transition: all 0.3s linear;
}

.c0 {
  display: flex;
  padding-bottom: 8px;
  justify-content: space-between;
  width: 100%;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      Загрузка данных...
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</div>
`;

exports[`ProgressBar should render component with prop appearance=error 1`] = `
.c1 {
  background: var(--admiral-color-Neutral_Neutral20, #D5D8DE);
  border-radius: 2px;
  min-width: 140px;
  min-height: 4px;
  display: flex;
}

.c2 {
  background: var(--admiral-color-Error_Error60Main, #D92020);
  width: 0%;
  border-radius: 2px;
  transition: all 0.3s linear;
}

.c0 {
  display: flex;
  padding-bottom: 8px;
  justify-content: space-between;
  width: 100%;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Error_Error60Main, #D92020);
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      Загрузка данных...
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</div>
`;

exports[`ProgressBar should render component with prop percent 1`] = `
.c1 {
  background: var(--admiral-color-Neutral_Neutral20, #D5D8DE);
  border-radius: 2px;
  min-width: 140px;
  min-height: 4px;
  display: flex;
}

.c2 {
  background: var(--admiral-color-Primary_Primary60Main, #0062FF);
  width: 50%;
  border-radius: 2px;
  transition: all 0.3s linear;
}

.c0 {
  display: flex;
  padding-bottom: 8px;
  justify-content: space-between;
  width: 100%;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Caption_Caption1, 400);
  font-size: var(--admiral-font-size-Caption_Caption1, 12px);
  line-height: var(--admiral-line-height-Caption_Caption1, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #23262D);
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      Загрузка данных...
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
  </div>
</div>
`;
